--- a/index.html
+++ b/index.html
@@ -5,61 +5,92 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="bootstrap-4.1.3-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="style.css">
     <script src="jquery-3.3.1.min.js"></script>
     <script src="client.js"></script>
-    <link rel="stylesheet" , source="/Users/Ahmed/Prime/PrimePW/Weekend1_Salary_Calc/style.css">
     <title>Ahmed's Nifty Calculator</title>
 </head>
 
+
+
 <body>
-    <h1>Salary Calculator</h1>
-    <div class=container1>
-        <div class="addEmployee"> Add Employee </div>
-
-        <input id="firstname" type="text" placeholder="First Name" />
-        <input id="lastname" type="text" placeholder="Last Name" />
-        <input id="ID" type="text" placeholder="ID" />
-        <input id="Title" type="text" placeholder="Title" />
-        <input id="Annual Salary" type="text" placeholder="Annual Salary" />
-
-        <button id="submit">Submit</button>
-
+    <div class="container-fluid">
+        <h1>Salary Calculator</h1>
     </div>
 
+    <div class=container1>
 
-    <div class=container2>
+        <div class="addEmployee"> Add Employee </div>
+
+        <input id="firstNameInput" type="text" placeholder="First Name:" />
+        <input id="lastNameInput" type="text" placeholder="Last Name:" />
+        <input id="idInput" type="number" placeholder="ID:" />
+        <input id="titleInput" type="text" placeholder="Title:" />
+        <input id="annualSalaryInput" type="number" placeholder="Annual Salary:" />
+
+
+        
+    </div>
+    <button id="submit">Submit</button>
+
+    <div class="container2">
         <h3> Employees</h3>
-<table class="Table">
-<th>First Name</th>
-<th>last Name</th>
-<th>ID</th>
-<th>Title</th>
-<th>Annual Salary</th>
 
-<tr class="firstRow"></tr>
-<td>Jen</td>
-<td>Barber</td>
-<td>4521</td>
-<td>Team Lead</td>
-<td>80,0000</td>
+        <table id="Table">
+            <thead id="tableheader">
+                <th id="firstName">First Name</th>
+                <th id="lastName">Last Name</th>
+                <th id="ID">ID</th>
+                <th id="title">Title</th>
+                <th id="annualsalary" name="salary">Annual Salary</th>
+            </thead>
 
-<tr class="secondRow"></tr>
-<td>Maurice</td>
-<td>Moss</td>
-<td>8724</td>
-<td>Support Team</td>
-<td>80,0000</td>
-
-<tr class="thirdRow"></tr>
-<td>Roy</td>
-<td>Smith</td>
-<td>9623</td>
-<td>Quality Assurance </td>
-<td>48,000</td>
-
-</table>
+            <tbody>
+                <tr="firstRow">
+                    <td>Jen</td>
+                    <td>Barber</td>
+                    <td>4521</td>
+                    <td>Team Lead</td>
+                    <td id="salary">80,0000</td>
+                    <td>
+                        <input type="button" id="removeRow1" value='Remove Employee' />
+                    </td>
+                    </tr>
 
 
+                    <tr id="secondRow">
+                        <td>Maurice</td>
+                        <td>Moss</td>
+                        <td>8724</td>
+                        <td>Support Team</td>
+                        <td name="salary" >80,0000</td>
+                        <td>
+                            <input type="button" id="removeRow2" value='Remove Employee' />
+                        </td>
+                    </tr>
+
+                    <tr id="thirdRow">
+                        <td>Roy</td>
+                        <td>Smith</td>
+                        <td>9623</td>
+                        <td>Quality Assurance </td>
+                        <td name="salary">48,000</td>
+                        <td>
+                            <input type="button" id="removeRow3" value='Remove Employee' />
+                        </td>
+                    </tr>
+
+
+
+
+
+
+            </tbody>
+
+        </table>
+
+        <div class="monthlySalary">Monthly Salary Cost:</div>
 
 
 
